update text-block.md